--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.cloud.config.server.git.searchPaths=config-repo
 spring.cloud.config.server.git.username=username
 spring.cloud.config.server.git.password=password
 
+# actuator\u662F\u5426\u9700\u8981\u5B89\u5168\u4FDD\u8BC1
+management.security.enabled=false
