--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -27,3 +27,5 @@ spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
 spring.rabbitmq.password=123456
+
+spring.cloud.bus.trace.enabled=true
