--- a/stream-hello/src/main/resources/application.properties
+++ b/stream-hello/src/main/resources/application.properties
@@ -3,6 +3,11 @@ logging.level.root=INFO
 
 spring.application.name=stream-hello
 
+# \u76EE\u7684\u5730\uFF1Aexchange\u540D\u79F0
+spring.cloud.stream.bindings.input.destination=raw-sensor-data
+# \u6D88\u8D39\u7EC4
+spring.cloud.stream.bindings.input.group=test
+
 spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
