--- a/stream-hello/src/main/resources/application.properties
+++ b/stream-hello/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
 spring.rabbitmq.password=123456
+
+spring.cloud.stream.bindings.user.content-type=application/json
