--- a/stream-app1/src/main/resources/application.properties
+++ b/stream-app1/src/main/resources/application.properties
@@ -3,9 +3,13 @@ logging.level.root=INFO
 
 spring.application.name=stream-app1
 
-
 # \u6D88\u8D39\u7EC4
 spring.cloud.stream.bindings.input.group=test
+
+# \u6D88\u8D39\u7EC4
+spring.cloud.stream.bindings.sinkInput.group=Service-A
+# \u4E3B\u9898\u540D
+spring.cloud.stream.bindings.sinkInput.destination=greetings
 
 spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
