--- a/stream-app2/src/main/resources/application.properties
+++ b/stream-app2/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.cloud.stream.bindings.output.destination=input
 # \u6D88\u8D39\u7EC4
 spring.cloud.stream.bindings.input.group=test
 
+# \u76EE\u7684\u5730\uFF1Aexchange\u540D\u79F0 \u4E3B\u9898\u540D
+spring.cloud.stream.bindings.sinkOutput.destination=greetings
+
 spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
