--- a/stream-app1/src/main/resources/application.properties
+++ b/stream-app1/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.cloud.stream.bindings.sinkInput.group=Service-A
 # \u4E3B\u9898\u540D
 spring.cloud.stream.bindings.sinkInput.destination=greetings
 
+# \u5F00\u542F\u6D88\u8D39\u8005\u5206\u533A\u529F\u80FD
+spring.cloud.stream.bindings.sinKInput.consumer.partitioned=true
+# \u5F53\u524D\u6D88\u8D39\u8005\u7684\u603B\u5B9E\u4F8B\u6570\u91CF
+spring.cloud.stream.instance-count=2
+# \u5F53\u524D\u5B9E\u4F8B\u7684\u7D22\u5F15\u53F7\uFF0C\u4ECE0\u5F00\u59CB\uFF0C\u6700\u5927\u503C\u4E3Aspring.cloud.stream.instance-count\u51CF1
+spring.cloud.stream.instance-index=0
+
 spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
