--- a/stream-app2/src/main/resources/application.properties
+++ b/stream-app2/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.cloud.stream.bindings.input.group=test
 # \u76EE\u7684\u5730\uFF1Aexchange\u540D\u79F0 \u4E3B\u9898\u540D
 spring.cloud.stream.bindings.sinkOutput.destination=greetings
 
+# \u5206\u533A\u952E\u7684\u8868\u8FBE\u5F0F
+spring.cloud.stream.bindings.sinkOutput.producer.partition-key-expression=payload.age
+# \u6D88\u606F\u5206\u533A\u6570\u91CF
+spring.cloud.stream.bindings.sinkOutput.producer.partition-count=2
+
 spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
