--- a/trace-2/src/main/resources/application.properties
+++ b/trace-2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9102
-# logging.level.root=INFO
+logging.level.root=INFO
 
 eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
 
