--- a/trace-1/src/main/resources/application.properties
+++ b/trace-1/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9101
 logging.level.root=INFO
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
 
