--- a/trace-1/src/main/resources/application.properties
+++ b/trace-1/src/main/resources/application.properties
@@ -4,4 +4,5 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
 
-spring.application.name=trace-1
+# \u4EE3\u8868\u6536\u96C610%\u7684\u8BF7\u6C42\u8DDF\u8E2A\u4FE1\u606F
+spring.sleuth.sampler.percentage=0.1
