--- a/zipkin-server/src/main/resources/application.properties
+++ b/zipkin-server/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=9411
 logging.level.root=INFO
 
 spring.application.name=zipkin-server
+
+spring.rabbitmq.host=10.0.40.242
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=m2croot
+spring.rabbitmq.password=123456
