--- a/trace-2/pom.xml
+++ b/trace-2/pom.xml
@@ -56,6 +56,22 @@
             <artifactId>logstash-logback-encoder</artifactId>
             <version>4.6</version>
         </dependency>
+
+        <!-- HTTP方式实现收集 -->
+        <!--<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-stream</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
