--- a/trace-2/src/main/resources/application.properties
+++ b/trace-2/src/main/resources/application.properties
@@ -6,3 +6,11 @@ eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:111
 
 # \u4EE3\u8868\u6536\u96C610%\u7684\u8BF7\u6C42\u8DDF\u8E2A\u4FE1\u606F
 spring.sleuth.sampler.percentage=0.1
+
+# HTTP\u65B9\u5F0F\u5B9E\u73B0\u6536\u96C6
+# spring.zipkin.base-url=http://localhost:9411
+
+spring.rabbitmq.host=10.0.40.242
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=m2croot
+spring.rabbitmq.password=123456
