--- a/zipkin-server/src/main/resources/application.properties
+++ b/zipkin-server/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.rabbitmq.host=10.0.40.242
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=m2croot
 spring.rabbitmq.password=123456
+
+spring.datasource.schema=classpath://mysql.sql
+spring.datasource.url=jdbc:mysql://localhost:3306/zipkin
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.continue-on-error=true
+spring.datasource.initialize=true
+
+zipkin.storage.type=mysql
